remove the  release-9 profile